--- a/service/service_oss/src/main/resources/application.yml
+++ b/service/service_oss/src/main/resources/application.yml
@@ -12,7 +12,7 @@ spring:
 aliyun:
   oss:
     file:
-      endpoint: http://oss-cn-beijing.aliyuncs.com
+      endpoint: oss-cn-beijing.aliyuncs.com
       keyid: LTAI5tPr3VwhD88p4fCfjtok
       keysecret: QhfdBC9ysEQmgyZabulmBKeOrEJA2E
       bucketname: edu-teacher-8848
